# shadowtrace

./: .gitignore  Cargo.toml  README.md  install.sh
src/: app.rs  cli.rs  commands.rs  commands.rs.bak  commands.rs.bak2  commands.rs.bak3  commands.rs.bak4  config.rs  error.rs  file_monitor.rs  lib.rs  llm.rs  main.rs  network.rs  process.rs  reports.rs
src/ui/: app.rs  braille_art.rs  events.rs  mod.rs  tui.rs
src/ui/screens/: dashboard.rs  file_monitor.rs  help.rs  mod.rs  network_monitor.rs  process_monitor.rs  reports.rs
src/ui/widgets/: animated_text.rs  braille_chart.rs  mod.rs  sparkline_braille.rs
